public static class UIUtility
{
    public const string SHOW_ANIMATION_NAME = "Show";
    public const string HIDE_ANIMATION_NAME = "Hide";
    public const string ENABLE_ANIMATION_NAME = "Enable";
    public const string DISABLE_ANIMATION_NAME = "Disable";
    public const string FORCE_OFF_ANIMATION_NAME = "ForceOff";
}